--- a/site/css/main.css
+++ b/site/css/main.css
@@ -856,15 +856,25 @@ ul {
   padding-top: 0.7em;
 }
 
-.param-optional .param-types {
+.param-optional .param-types,
+.param-nullable .param-types {
   font-style: italic;
+}
+
+.param-optional .param-types:after,
+.param-nullable .param-types:after {
+  display: block;
+  color: #aaa;
+  font-style: italic;
+  font-size: 85%;
 }
 
 .param-optional .param-types:after {
   content: " (optional)";
-  color: #aaa;
-  font-style: italic;
-  font-size: 85%;
+}
+
+.param-nullable .param-types:after {
+  content: " (may be null)";
 }
 
 .method-heading {
