--- a/site/components/language-switcher/language-switcher.html
+++ b/site/components/language-switcher/language-switcher.html
@@ -86,7 +86,7 @@
       </a>
     </li>
     <li>
-      <a href="https://googlecloudplatform.github.io/gcloud-ruby" title="gcloud-ruby Documentation" class="skip-external-link">
+      <a href="https://googlecloudplatform.github.io/gcloud-ruby/docs/latest" title="gcloud-ruby Documentation" class="skip-external-link">
         <img src="site/img/icon-lang-ruby.svg" alt="gcloud-ruby" class="menu-icon">
         Ruby
       </a>
